# DefineProject

./: CMakeLists.txt
data/: coordinate_system.txt  demo.prj  demo.tfw  demo.tif  demo.txt  demo_wgs84.tfw  demo_wgs84.tif  demo_wgs84.txt
include/: coordinate_system_data.hpp  coordinate_system_item.hpp  coordinate_system_model.hpp  geographic_coordinate_system.hpp  geographic_coordinate_system_item.hpp  mainwindow.hpp  projected_coordinate_system.hpp  projected_coordinate_system_item.hpp  read_write_file.hpp  write_file.hpp
resource/: resource.qrc
source/: coordinate_system_data.cpp  coordinate_system_item.cpp  coordinate_system_model.cpp  geographic_coordinate_system.cpp  geographic_coordinate_system_item.cpp  main.cpp  mainwindow.cpp  projected_coordinate_system.cpp  projected_coordinate_system_item.cpp  read_write_file.cpp
ui/: main.ui
